--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "nodemon server.js",
-		"test": "mocha"
+		"test": "mocha",
+		"predeploy": "npm audit",
+		"deploy": "git push heroku master"
 	},
 	"dependencies": {
 		"cors": "^2.8.5",
@@ -19,5 +21,8 @@
 		"mocha": "^6.2.2",
 		"nodemon": "^2.0.2",
 		"supertest": "^4.0.2"
+	},
+	"engines": {
+		"node": "10.16.3"
 	}
 }
